--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--tgui--text_color);
+  background: var(--tgui--section_bg_color);
+}
+button {
+  color: var(--tgui--button_text_color);
+  background: var(--tgui--button_color);
 }
