--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,6 @@ body {
   background: var(--tgui--section_bg_color);
 }
 button {
-  color: var(--tgui--button_text_color);
-  background: var(--tgui--button_color);
+  color: var(--tgui--text_color);
+  border: 2px solid var(--tgui--button_color);
 }
