--- a/app/globals.css
+++ b/app/globals.css
@@ -9,5 +9,5 @@ body {
 }
 button {
   color: var(--tgui--text_color);
-  border: 2px solid var(--tgui--button_color);
+  border-right: 2px solid var(--tgui--button_color);
 }
