--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,44 @@ button {
     opacity: 1;
   }
 }
+
+thead {
+  background-color: var(--tgui--secondary_bg_color);
+  color: var(--tgui--text_color);
+}
+tbody tr:nth-child(odd) {
+  color: var(--tgui--text_color);
+  background-color: var(--tgui--bg_color); /* Odd rows have red background */
+}
+
+tbody tr:nth-child(even) {
+  color: var(--tgui--text_color);
+  background-color: var(--tgui--header_bg_color); /* Even rows have blue background */
+}
+
+
+.scrollabler {
+  overflow: auto; /* Enable vertical scrolling */
+  /* Optional border for visibility */
+  scrollbar-width: thin; /* For Firefox: thin scrollbar */
+  scrollbar-color: var(--tgui--section_header_text_color) var(--tgui--secondary_bg_color); /* For Firefox: thumb and track color */
+}
+
+/* Webkit Browsers (Chrome, Edge, Safari) */
+.scrollabler::-webkit-scrollbar {
+  width: 8px; /* Width of scrollbar */
+}
+
+.scrollabler::-webkit-scrollbar-thumb {
+  background:  var(--tgui--section_header_text_color);
+  border-radius: 4px; /* Rounded corners */
+}
+
+.scrollabler::-webkit-scrollbar-thumb:hover {
+  background: var(--tgui--section_header_text_color); /* Darker thumb on hover */
+}
+
+.scrollabler::-webkit-scrollbar-track {
+  background: var(--tgui--secondary_bg_color); /* Track background */
+  border-radius: 4px; /* Rounded track corners */
+}
